# zorba-data-cleaning-module

./: CMakeLists.txt
src/: CMakeLists.txt  character-based-string-similarity.xq  consolidation.xq  conversion.xq  hybrid-string-similarity.xq  normalization.xq  phonetic-string-similarity.xq  set-similarity.xq  token-based-string-similarity.xq
src/com/: CMakeLists.txt
src/com/zorba-xquery/www/: CMakeLists.txt
src/com/zorba-xquery/www/modules/: CMakeLists.txt
src/com/zorba-xquery/www/modules/data-cleaning/: CMakeLists.txt  character-based-string-similarity.xq  consolidation.xq  conversion.xq  error.xq  hybrid-string-similarity.xq  normalization.xq  phonetic-string-similarity.xq  set-similarity.xq  string-similarity.xq  thesaurus.xq  token-based-string-similarity.xq  whitepages_schema.xsd
test/ExpQueryResults/data-cleaning/character-based-string-similarity/: jaro-winkler.xml.res  jaro.xml.res
test/ExpQueryResults/data-cleaning/consolidation/: most-attributes.xml.res  most-distinct-attributes.xml.res
test/ExpQueryResults/data-cleaning/conversion/: address-from-geocode.xml.res  address-from-phone.xml.res  address-from-user.xml.res  currency-convert.xml.res  geocode-from-address.xml.res  phone-from-address.xml.res  phone-from-user.xml.res  unit-convert.xml.res  user-from-address.xml.res  user-from-phone.xml.res
test/ExpQueryResults/data-cleaning/hybrid-string-similarity/: monge-elkan-jaro-winkler.xml.res
test/ExpQueryResults/data-cleaning/normalization/: normalize-address.xml.res  to-dateTime.xml.res  to-time.xml.res
test/ExpQueryResults/data-cleaning/phonetic-string-similarity/: metaphone-key.xml.res  soundex-key.xml.res
test/ExpQueryResults/data-cleaning/set-similarity/: deep-union.xml.res  distinct.xml.res
test/Queries/data-cleaning/character-based-string-similarity/: edit-distance.xq  jaro-winkler.xq  jaro.xq  needleman-wunsch.xq
test/Queries/data-cleaning/consolidation/: least-attributes.xq  least-distinct-attributes.xq  least-distinct-elements.xq  least-distinct-nodes.xq  least-elements.xq  least-nodes.xq  least-similar-edit-distance.xq  least-tokens.xq  leastfrequent_1.xq  lesssimilar-editdistance_1.xq  lesstokens_1.xq  longest_1.xq  matching_1.xq  moresimilar-editdistance_1.xq  moretokens_1.xq  most-attributes.xq  most-distinct-attributes.xq  most-distinct-elements.xq  most-distinct-nodes.xq  most-elements.xq  most-frequent.xq  most-nodes.xq  most-similar-edit-distance.xq  most-tokens.xq  mostfrequent_1.xq  shortest_1.xq  superstring_1.xq
test/Queries/data-cleaning/conversion/: address-from-geocode.xq  address-from-phone.xq  address-from-user.xq  currency-convert.xq  geocode-from-address.xq  geocode_1.xq  phone-from-address.xq  phone-from-user.xq  reversegeocode_1.xq  unit-convert.spec  unit-convert.xq  user-from-address.xq  user-from-phone.xq
test/Queries/data-cleaning/hybrid-string-similarity/: monge-elkan-jaro-winkler.xq  soft-cosine-tokens-edit-distance.xq  soft-cosine-tokens-jaro-winkler.xq  soft-cosine-tokens-jaro.xq  soft-cosine-tokens-metaphone.xq  soft-cosine-tokens-soundex.xq
test/Queries/data-cleaning/normalization/: normalize-address.xq  to-date.xq  to-dateTime.spec  to-dateTime.xq  to-time.spec  to-time.xq
test/Queries/data-cleaning/phonetic-string-similarity/: metaphone-key.xq  metaphone.xq  soundex-key.xq  soundex.xq
test/Queries/data-cleaning/set-similarity/: deep-intersect.xq  deep-union.xq  dice.xq  dice_1.xq  distinct.xq  distinct_1.xq  dup-intersect_1.xq  dup-union_1.xq  jaccard.xq  jaccard_1.xq  overlap.xq
test/Queries/data-cleaning/string-similarity/: cosine-ngrams_1.xq  cosine-tokens_1.xq  dice-ngrams_1.xq  dice-tokens_1.xq  editdistance_1.xq  jaccard-ngrams_1.xq  jaccard-tokens_1.xq  jaro_1.xq  jarowinkler_1.xq  ngrams_1.xq
test/Queries/data-cleaning/token-based-string-similarity/: cosine-ngrams.xq  cosine-tokens.xq  cosine.xq  dice-ngrams.xq  dice-tokens.xq  jaccard-ngrams.xq  jaccard-tokens.xq  ngrams.xq  overlap-ngrams.xq  overlap-tokens.xq
